# group

./: Cargo.toml  README.md
.github/workflows/: CI.yml  test_rust.yml
group/: Cargo.toml  README.md
group/src/: lib.rs
py-goup/: Cargo.toml  README.md  pyproject.toml
py-goup/python/: README.md
py-goup/python/group/: __init__.py  data.py
py-goup/python/py_group/: __init__.py
py-goup/src/: lib.rs
